--- a/pom.xml
+++ b/pom.xml
@@ -36,19 +36,19 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-java</artifactId>
-			<version>2.52.0</version>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>selenium-webdriver</artifactId>
+			<version>4.0.0-alpha.7</version>
 		</dependency>
 		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-firefox-driver</artifactId>
-			<version>2.52.0</version>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>5.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-server</artifactId>
-			<version>2.52.0</version>
+			<version>3.141.59</version>
 		</dependency>
 	</dependencies>
 
